# quanta-finance

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  quanta-finance.spec  quanta_finance.spec  quanta_finance_optimized.spec
.claude/hooks/: block-secrets.py
.github/workflows/: ci.yml  release.yml
build_finance/: __init__.py  autotrader.py  backtest.py  broker.py  cli.py  data.py  indicators.py  market_data.py  portfolio.py  risk.py
build_finance/gui/: __init__.py  app.py  data_bridge.py
build_finance/gui/pages/: autotrader_page.py  backtest_page.py  dashboard.py  market_data_page.py  portfolio_page.py  settings_page.py
docs/: ALPACA_SETUP.md  ENTERPRISE-READINESS.md
docs/brand/: README.md
quanta_finance/: __init__.py  autotrader.py  backtest.py  broker.py  cli.py  data.py  indicators.py  market_data.py  orderbook.py  portfolio.py  risk.py  sizing.py  strategies.py
quanta_finance/gui/: __init__.py  app.py  data_bridge.py
quanta_finance/gui/pages/: autotrader_page.py  backtest_page.py  dashboard.py  market_data_page.py  portfolio_page.py  settings_page.py
tests/: test_backtest.py  test_data_bridge.py  test_indicators.py  test_market_data.py  test_risk.py
