[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-finance"
version = "1.0.0"
description = "Algorithmic trading toolkit for backtesting, technical indicators, portfolio optimization, and paper/live broker execution"
readme = "README.md"
license = { text = "FSL-1.1-MIT" }
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/build-finance"
Repository = "https://github.com/HarperZ9/build-finance"
Issues = "https://github.com/HarperZ9/build-finance/issues"

[project.scripts]
build-finance = "build_finance.cli:main"

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7", "build-ui>=1.0.0"]
all = ["matplotlib>=3.7,<4", "ta-lib>=0.4,<1", "PyQt6>=6.5,<7"]
test = ["pytest>=8.0", "pytest-cov>=5"]
dev = ["pytest>=8.0", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10", "build>=1.2"]

[tool.setuptools.packages.find]
include = ["build_finance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["build_finance"]
omit = ["*/gui/*"]  # GUI is exercised manually, not in headless CI

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["build_finance"]
# External GUI/broker/data libraries (PyQt6, ta-lib, matplotlib) ship no type stubs.
ignore_missing_imports = true

# The PyQt6 GUI layer is a thin adapter over an untyped Qt binding; it is checked at its
# public boundary but not strict-typed internally. The numeric trading core is type-clean.
[[tool.mypy.overrides]]
module = ["build_finance.gui.*"]
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "I",     # isort
]
ignore = ["E501", "E701", "E702", "E741", "B905", "SIM102", "SIM105", "SIM108", "SIM112", "SIM117", "E402", "SIM113", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional in __init__ files

[tool.ruff.format]
quote-style = "double"
